# Obiectum

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: drawables.cpp
examples/Balls/: RandomShrink.cpp  TrippyColors.cpp  WallBounce.cpp  balls.cpp
src/: CMakeLists.txt  Component.cpp  GameObject.cpp  GameObject.hpp  Hierarchy.cpp  Hierarchy.hpp  Obiectum.hpp  Physics.hpp
src/components/: Collidable.cpp  Components.hpp  Drawable.cpp  RigidBody.cpp
src/physics/: Color.cpp  Color.hpp  Point.cpp  Point.hpp  StopClock.cpp  StopClock.hpp  Vector.cpp  Vector.hpp
